--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1 class="directory-title"><img src="http://webapps.eafit.edu.co/directorio/usuarios/imagenes/logosimbolo_eafit.png" alt="EAFIT" /> DIRECTORIO DE EMPLEADOS</h1>
+    <h1 class="directory-title"><img src="logosimbolo_eafit.png" alt="EAFIT" /> DIRECTORIO DE EMPLEADOS</h1>
     
     <div class="search">
       <label for="search">BUSCAR EMPLEADOS: </label
