--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 class="directory-title"><img src="https://www.eafit.edu.co/SiteCollectionImages/logo.png" alt="EAFIT" /> DIRECTORIO DE EMPLEADOS</h1>
     
     <div class="search">
-      <label for="search">BUSCAR EMPLEADOS: </label
+      <label for="search" text-shadow: 4px 4px 4px #aaa;>BUSCAR EMPLEADOS: </label
       ><input
         type="text"
         name="search"
